Changing names of scripts to run spark-bench. Added table of contents to a doc, did some other cleanup